--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.17.6",
     "@tailwindcss/vite": "^4.1.14",
     "aos": "^2.3.4",
     "lucide-react": "^0.547.0",
